Sat Aug 09 13:32:29 2008  Lee Noar  <leenoar@sky.com>

	* som_elf.c(elffile_open): It's possible for the text segment not
	to be a multiple of 4 in size which can create a 'hole' between
	segments due to realignment by the static linker. This can cause
	two problems; 1) The memory size calculation doesn't take the hole
	into account meaning the segments overflow and 2) The free memory
	pointer is not word aligned.
	Rather than adding memory size of segments together, track upper
	limit of memory segments as an offset from the start of the object.

	* som_runcom.c(command_run): To be on the safe side, make sure we
	start with a word aligned free memory pointer.

Wed Jul 09 21:55:34 2008  Lee Noar  <leenoar@sky.com>

	* som_utilswis.c(som_iterate_objects): When the last/first object
	has been returned, make sure r1 (internal handle) is set to 0 on
	exit.

Mon Mar 10 17:17:26 2008  Lee Noar  <leenoar@sky.com>

	* som_runcom.c: Change occurrence of DSOLib: to SharedLibs: as part
	of the process to rename !DSO-libs as !SharedLibs.

Fri Feb  1 00:39:19 2008  Lee Noar  <leenoar@sky.com>

	* som_alloc.c(DA_extend): Wrong pointer passed to heap_block_size().

Fri Jan  4 18:24:23 2008  Lee Noar  <leenoar@sky.com>

	* som_workspace.h: Move runtime workspace to immediately after ELF
	header. Use a new function, rt_workspace_find(), to calculate
	address of runtime workspace using ELF header.
	* som_register.c: Use new function to find workspace.
	* som_array.c: Likewise.

	The following changes were also made to parts of GCCSDK:

	* bfd/elf32-arm.c: Add extra 20 bytes to size of ELF header to use
	as runtime workspace.
	* ld/scripttempl/elf.sc: Remove runtime workspace allocation from
	linker scripts.

	Note that the runtime workspace has been reduced in size to five 4
	byte words rather than ten. The current implementation uses the first
	two leaving the other three unused.

	There are several advantages to moving the workspace:
